--- a/styles/sass/components/_main-content.scss
+++ b/styles/sass/components/_main-content.scss
@@ -46,7 +46,7 @@
 
         .visible {
             visibility: visible;
-            display: inherit;
+            display: flex;
         }
     }
 }
