--- a/styles/main.css
+++ b/styles/main.css
@@ -25,10 +25,12 @@
   .navigation-wrapper .logo {
     padding-top: 4rem;
     padding-left: 0;
-    font-family: 'Baloo Thambi'; }
+    font-family: 'Baloo Thambi';
+    cursor: pointer; }
     .navigation-wrapper .logo a {
       font-size: 32px;
       color: #d1423c;
+      cursor: pointer;
       text-decoration: none; }
       @media screen and (max-width: 540px) {
         .navigation-wrapper .logo a {
@@ -46,9 +48,11 @@
     .navigation-wrapper .navigation .nav-tab {
       font-family: 'Baloo Thambi';
       color: #d1423c;
+      cursor: pointer;
       display: block; }
       .navigation-wrapper .navigation .nav-tab a {
-        text-decoration: none; }
+        text-decoration: none;
+        cursor: pointer; }
         @media screen and (max-width: 540px) {
           .navigation-wrapper .navigation .nav-tab a {
             font-size: 14px; } }
@@ -278,6 +282,11 @@
       width: 100%;
       padding-top: .25rem; } }
 
+.navigation-wrapper.work .logo a {
+  color: #f4efe9; }
+.navigation-wrapper.work .navigation .nav-tab {
+  color: #f4efe9; }
+
 #work-page {
   background-color: #000000; }
   #work-page .portfolio-content {
@@ -296,13 +305,18 @@
       margin: auto;
       padding: 1rem; }
 
+.navigation-wrapper.contact .logo a {
+  color: #dfa5a5; }
+.navigation-wrapper.contact .navigation .nav-tab {
+  color: #dfa5a5; }
+
 #contact-page {
   max-height: 90vh;
   background-color: #fbedc8; }
   @media screen and (width: 1024px), screen and (height: 1366) {
     #contact-page {
       flex-direction: column; } }
-  @media screen and (max-height: 890px) {
+  @media screen and (min-height: 890px) {
     #contact-page {
       flex-direction: column; } }
   @media screen and (max-height: 420px) {
