--- a/styles/sass/pages/_work.scss
+++ b/styles/sass/pages/_work.scss
@@ -1,3 +1,16 @@
+.navigation-wrapper.work{
+    .logo {
+        a {
+            color: $tan-300-jl;
+        }
+    }
+    .navigation {
+        .nav-tab {
+            color: $tan-300-jl;
+        }
+    }
+}
+
 #work-page {
     background-color: $black;
 
