--- a/styles/main.css
+++ b/styles/main.css
@@ -288,22 +288,14 @@
   color: #f4efe9; }
 
 #work-page {
-  background-color: #000000; }
-  #work-page .portfolio-content {
+  background-color: #000000;
+  flex-direction: column; }
+  #work-page .portfolio-row {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #FFFFFF;
-    margin-top: 1rem;
-    width: 40%;
-    height: 80%; }
-    #work-page .portfolio-content img {
-      padding: .5rem; }
-    #work-page .portfolio-content h2 {
-      color: #FFFFFF;
-      font-size: 32px;
-      margin: auto;
-      padding: 1rem; }
+    flex-direction: row;
+    justify-content: space-evenly; }
+  #work-page .portfolio-content img {
+    padding: .5rem; }
 
 .navigation-wrapper.contact .logo a {
   color: #dfa5a5; }
@@ -313,10 +305,10 @@
 #contact-page {
   max-height: 90vh;
   background-color: #fbedc8; }
-  @media screen and (width: 1024px), screen and (height: 1366) {
+  @media screen and (max-width: 770px) {
     #contact-page {
       flex-direction: column; } }
-  @media screen and (min-height: 890px) {
+  @media screen and (width: 1024px), screen and (height: 1366) {
     #contact-page {
       flex-direction: column; } }
   @media screen and (max-height: 420px) {
@@ -326,6 +318,10 @@
     width: 100%;
     flex: 1; }
     @media screen and (max-width: 1240px) {
+      #contact-page .image-content {
+        margin: 0 auto;
+        width: 70%; } }
+    @media screen and (width: 1366px), screen and (height: 1024px) {
       #contact-page .image-content {
         margin: 0 auto;
         width: 70%; } }
@@ -357,6 +353,10 @@
       #contact-page .text-content {
         width: 80%;
         margin: 0 auto; } }
+    @media screen and (width: 1366px), screen and (height: 1024px) {
+      #contact-page .text-content {
+        margin: 0 auto;
+        padding-top: 2rem; } }
     @media screen and (width: 1024px), screen and (height: 1366) {
       #contact-page .text-content {
         padding-top: 1rem;
