--- a/styles/sass/pages/_contact.scss
+++ b/styles/sass/pages/_contact.scss
@@ -14,13 +14,18 @@
 #contact-page {
     max-height: 90vh;
     background-color: $tan-500-jl;
+    // flex-direction: column; 
+
+    @media screen and (max-width: 770px) {
+        flex-direction: column;
+    }
 
     @media screen and (width: 1024px), screen and (height: 1366) {
         flex-direction: column;
     }
 
-    @media screen and (min-height: 890px) {
-        flex-direction: column;
+    @media screen and (max-height: 860px) {
+        // flex-direction: column;
     }
 
     @media screen and (max-height: 420px) {
@@ -36,8 +41,11 @@
             width: 70%;
         }
 
-        @media screen and (width: 1024px), screen and (height: 1366) {
+        @media screen and (width: 1366px), screen and (height: 1024px) {
+            margin: 0 auto;
+            width: 70%;
         }
+
         @media screen and (max-width: 970px) {
             width: 100%;
         }
@@ -72,6 +80,11 @@
             width: 80%;
             margin: 0 auto;
             // padding: 2rem;
+        }
+
+        @media screen and (width: 1366px), screen and (height: 1024px) {
+            margin: 0 auto;
+            padding-top: 2rem;
         }
 
         @media screen and (width: 1024px), screen and (height: 1366) {
