--- a/styles/sass/pages/_work.scss
+++ b/styles/sass/pages/_work.scss
@@ -1,9 +1,10 @@
-.navigation-wrapper.work{
+.navigation-wrapper.work {
     .logo {
         a {
             color: $tan-300-jl;
         }
     }
+
     .navigation {
         .nav-tab {
             color: $tan-300-jl;
@@ -13,24 +14,16 @@
 
 #work-page {
     background-color: $black;
+    flex-direction: column;
+
+    .portfolio-row {
+        @include flex-direction-justify (flex, row, space-evenly);
+    }
 
     .portfolio-content {
-        @include flex-direction-justify (flex, column, space-between);
-
-        background-color: $white;
-        margin-top: 1rem;
-        width: 40%;
-        height: 80%;
 
         img {
             padding: .5rem;
-        }
-        
-        h2 {
-            color: $white;
-            font-size: 32px;
-            margin: auto;
-            padding: 1rem;
         }
     }
 }
