--- a/styles/main.css
+++ b/styles/main.css
@@ -383,4 +383,11 @@
         padding-left: 1rem;
         padding-right: 1rem; } }
 
+.ripe-border {
+  height: 100%;
+  border: 4px solid red;
+  margin: 2rem; }
+  .ripe-border .ripe-row {
+    height: 400px; }
+
 /*# sourceMappingURL=main.css.map */
