--- a/styles/sass/components/_navigation.scss
+++ b/styles/sass/components/_navigation.scss
@@ -4,8 +4,10 @@
     min-height: 80vh;
     max-width: 230px;
     z-index: 1;
-    position: relative;
-    left: 1.5rem;
+
+    position: fixed;
+    top: 0;
+    bottom: 0;
 
     @media screen and (max-width: 1024px) {
         min-height: 80vh;
@@ -16,7 +18,7 @@
         max-width: 100%;
         justify-content: space-between;
         min-height: 0;
-        left: 0;
+        position: relative;
     }
 
     .logo {
