--- a/styles/sass/pages/_about.scss
+++ b/styles/sass/pages/_about.scss
@@ -1,4 +1,6 @@
 #about-page {
+    // min-height: 0;
+
     @media screen and (width: 1024px), screen and (height: 1366) {
         flex-direction: column;
     }
