--- a/src/styles/sass/pages/_about.scss
+++ b/src/styles/sass/pages/_about.scss
@@ -1,5 +1,5 @@
 #about-page {
-    // min-height: 0;
+    min-height: 0;
 
     @media screen and (width: 1024px), screen and (height: 1366) {
         flex-direction: column;
