--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -1,5 +1,5 @@
 // --------------------------------------------------
-// sass --watch styles/sass/main.scss:styles/main.css
+// sass --watch src/styles/sass/main.scss:src/styles/main.css
 // --------------------------------------------------
 
 // BODY 
