--- a/src/styles/sass/components/_navigation.scss
+++ b/src/styles/sass/components/_navigation.scss
@@ -8,7 +8,8 @@
     position: fixed;
     top: 0;
     bottom: 0;
-
+    left: 18rem;
+    
     @media screen and (max-width: 1024px) {
         min-height: 80vh;
     }
