--- a/src/styles/sass/pages/_contact.scss
+++ b/src/styles/sass/pages/_contact.scss
@@ -21,7 +21,7 @@
 }
 
 #contact-page {
-    max-height: 90vh;
+    min-height: 0;
     background-color: $tan-500-jl;
     // flex-direction: column; 
 
