--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -197,6 +197,10 @@
   width: 100%;
   height: 100%;
 }
+.main-content .content-container .image-content video {
+  width: 100%;
+  height: 100%;
+}
 .main-content .content-container .text-content {
   width: 50%;
 }
