--- a/src/styles/sass/components/_main-content.scss
+++ b/src/styles/sass/components/_main-content.scss
@@ -35,6 +35,11 @@
                 width: 100%;
                 height: 100%;
             }
+
+            video {
+                width: 100%;
+                height: 100%;
+            }
         }
 
         .text-content {
