--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -193,6 +193,22 @@
 .main-content .content-container .image-content {
   width: 40%;
 }
+.main-content .content-container .image-content .nav-tab-image .digital:hover {
+  background-color: #a43c1f;
+  transition: ease-in-out 0.4s;
+}
+.main-content .content-container .image-content .nav-tab-image .paintings:hover {
+  background-color: #202534;
+  transition: ease-in-out 0.4s;
+}
+.main-content .content-container .image-content .nav-tab-image .animations:hover {
+  background-color: #f07801;
+  transition: ease-in-out 0.4s;
+}
+.main-content .content-container .image-content .nav-tab-image .ripe:hover {
+  background-color: #8a1176;
+  transition: ease-in-out 0.4s;
+}
 .main-content .content-container .image-content img {
   width: 100%;
   height: 100%;
