--- a/src/styles/sass/components/_main-content.scss
+++ b/src/styles/sass/components/_main-content.scss
@@ -31,6 +31,32 @@
         .image-content {
             width: 40%;
 
+            .nav-tab-image {
+                .digital {
+                    &:hover {
+                        background-color: #a43c1f;
+                        transition: ease-in-out 0.4s;
+                    }
+                }
+                .paintings {
+                    &:hover {
+                        background-color: #202534;
+                        transition: ease-in-out 0.4s;
+                    }
+                }
+                .animations {
+                    &:hover {
+                        background-color: #f07801;
+                        transition: ease-in-out 0.4s;
+                    }
+                }
+                .ripe {
+                    &:hover {
+                        background-color: #8a1176;
+                        transition: ease-in-out 0.4s;
+                    }
+                }
+            }
             img {
                 width: 100%;
                 height: 100%;
