--- a/src/styles/sass/components/_main-content.scss
+++ b/src/styles/sass/components/_main-content.scss
@@ -32,6 +32,30 @@
             width: 40%;
 
             .nav-tab-image {
+
+                .nav-tab-text {
+                    opacity: 0;
+                    position: absolute;
+                    top: 50%;
+                    text-decoration: none;
+    
+                    transform: translate(-50%, -50%);
+                    text-align: center;
+    
+                    font-family: 'Montserrat';
+                    font-size: 48px;
+                    font-weight: 600;
+                }
+
+                .nav-tab-text.left {
+                    left: 27%;
+                }
+
+                .nav-tab-text.right {
+                    right: 3%;
+                }
+
+
                 .digital {
                     &:hover {
                         background-color: #a43c1f;
@@ -66,6 +90,10 @@
                 width: 100%;
                 height: 100%;
             }
+        }
+
+        .image-content:hover .nav-tab-text {
+            opacity: 1;
         }
 
         .text-content {
