--- a/src/styles/sass/components/_svg.scss
+++ b/src/styles/sass/components/_svg.scss
@@ -34,12 +34,12 @@
 
     display: none;
     visibility: hidden;
-    
+
     img {
         position: absolute;
 
         width: 100%;
-        height: 100%
+        height: 100%;
     }
 
     @media screen and (max-width: 1240px) {
