--- a/src/styles/sass/components/_navigation.scss
+++ b/src/styles/sass/components/_navigation.scss
@@ -1,5 +1,5 @@
 .navigation-wrapper {
-    @include flex-direction-justify (flex, column, space-between);
+    @include flex-direction-justify(flex, column, space-between);
 
     min-height: 80vh;
     max-width: 230px;
@@ -25,7 +25,7 @@
     .logo {
         padding-top: 4rem;
         padding-left: 0;
-        font-family: 'Baloo Thambi';
+        font-family: "Baloo Thambi";
         cursor: pointer;
 
         a {
@@ -33,15 +33,15 @@
             color: $red-300-jl;
             cursor: pointer;
 
-            @include a-tag ();
+            @include a-tag();
 
-            @media screen and (max-width: 540px){
+            @media screen and (max-width: 540px) {
                 font-size: 24px;
             }
 
-            &:hover  {
+            &:hover {
                 color: #a3322e;
-                transition: ease-in-out .5s;
+                transition: ease-in-out 0.5s;
             }
         }
 
@@ -50,30 +50,28 @@
             padding-top: 1.5rem;
             padding-bottom: 1.5rem;
         }
-
     }
 
     .navigation {
         padding-bottom: 4rem;
         padding-left: 0;
 
-        @include ul-tag ();
+        @include ul-tag();
 
         .nav-tab {
-            font-family: 'Baloo Thambi';
+            font-family: "Baloo Thambi";
             color: $red-300-jl;
             cursor: pointer;
             text-decoration: none;
             font-size: 24px;
 
-            @include li-tag ();
+            @include li-tag();
 
             a {
-                @include a-tag ();
+                @include a-tag();
                 cursor: pointer;
 
-
-                @media screen and (max-width: 540px){
+                @media screen and (max-width: 540px) {
                     font-size: 14px;
                 }
             }
@@ -82,9 +80,9 @@
                 display: inline-block;
             }
 
-            &:hover  {
+            &:hover {
                 color: #a3322e;
-                transition: ease-in-out .5s;
+                transition: ease-in-out 0.5s;
             }
         }
 
@@ -92,7 +90,7 @@
             a {
                 font-size: 24px;
 
-                @media screen and (max-width: 540px){
+                @media screen and (max-width: 540px) {
                     font-size: 18px;
                 }
             }
