--- a/src/styles/sass/pages/_contact.scss
+++ b/src/styles/sass/pages/_contact.scss
@@ -1,4 +1,4 @@
-.navigation-wrapper.contact{
+.navigation-wrapper.contact {
     .logo {
         a {
             color: $pink-300-jl;
@@ -12,7 +12,7 @@
             a {
                 font-size: 24px;
 
-                @media screen and (max-width: 540px){
+                @media screen and (max-width: 540px) {
                     font-size: 18px;
                 }
             }
@@ -23,7 +23,7 @@
 #contact-page {
     min-height: 0;
     background-color: $tan-500-jl;
-    // flex-direction: column; 
+    // flex-direction: column;
 
     @media screen and (max-width: 770px) {
         flex-direction: column;
@@ -64,23 +64,23 @@
     }
 
     .text-content {
-        @include padding (10rem, 0, 0, null);
-        @include flex-direction-justify (flex, row, space-around);
+        @include padding(10rem, 0, 0, null);
+        @include flex-direction-justify(flex, row, space-around);
         width: 40%;
         flex: 1;
 
         p {
             font: 24px;
-            font-family: 'Montserrat';
+            font-family: "Montserrat";
             font-style: bold;
             line-height: 24px;
             color: $red-300-jl;
 
-            @media screen and (max-width: 540px){
+            @media screen and (max-width: 540px) {
                 font-size: 18px;
             }
 
-            @media screen and (max-width: 410px){
+            @media screen and (max-width: 410px) {
                 font-size: 14px;
             }
         }
@@ -97,21 +97,20 @@
         }
 
         @media screen and (width: 1024px), screen and (height: 1366) {
-            @include padding (1rem, 2rem, 2rem, 2rem);
+            @include padding(1rem, 2rem, 2rem, 2rem);
         }
 
         @media screen and (max-width: 970px) {
             width: 80%;
-            @include padding (2rem, 2rem, 1rem, 2rem);
+            @include padding(2rem, 2rem, 1rem, 2rem);
         }
 
         @media screen and (max-width: 540px) {
             width: 100%;
-            padding-top: .25rem;
+            padding-top: 0.25rem;
             margin-top: 4rem;
             padding-left: 1rem;
             padding-right: 1rem;
         }
     }
 }
-
